--- a/website/static/blog/main.css
+++ b/website/static/blog/main.css
@@ -82,3 +82,8 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
+.center-block {
+  margin: auto!important;
+  width: 50%!important;
+}
