--- a/website/templates/website/rules.html
+++ b/website/templates/website/rules.html
@@ -3,43 +3,7 @@
     <article class="media content-section">
         <h1>Rules Flashcards</h1>
     </article>
-    <article class="media content-section">
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Question</th>
-                <th scope="col">Answer</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>What are the three main parts of an essay?</td>
-                <td>Introduction, main body and conclusion</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>What should be included in the introduction?</td>
-                <td>Topic, background and plan</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>How should the main body of the essay be written?</td>
-                <td>Providing clear and focused sentences and using ideas from literature to support
-your main points.</td>
-            </tr>
-                        <tr>
-                <th scope="row">4</th>
-                <td>What should the conclusion include?</td>
-                <td>Include the most relevant and important issues concerning the topic.</td>
-            </tr>
-                        <tr>
-                <th scope="row">5</th>
-                <td>Before starting the essay, you should make sure that?</td>
-                <td>You have fully understood the question and have sufficient research for the essay</td>
-            </tr>
-            </tbody>
-        </table>
+    <article id="flashcard-article" class="media content-section">
+        <div id="column-row" class="row"></div>
     </article>
 {% endblock content %}
