--- a/website/static/blog/main.css
+++ b/website/static/blog/main.css
@@ -87,3 +87,49 @@ a.article-title:hover {
   margin: auto!important;
   width: 50%!important;
 }
+
+.flashcard {
+  background-color: transparent;
+  width: 20rem;
+  height: 210px;
+  margin: auto;
+  border-radius: 8px;
+  perspective: 1000px;
+}
+
+.flashcard-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flashcard:hover .flashcard-inner {
+  transform: rotateY(180deg);
+}
+
+.flashcard-front, .flashcard-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flashcard-front {
+  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+  color: white;
+  border-radius: 8px;
+}
+
+.flashcard-back {
+  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+  color: white;
+  border-radius: 8px;
+  transform: rotateY(180deg);
+}
