Created page for multiple choice game
- Added article to the homepage
- Created javascript file for multiple choice game logic (multiplechoice.js) -- NOT WORKING

--- a/website/templates/website/flashcards.html
+++ b/website/templates/website/flashcards.html
@@ -1,7 +1,7 @@
 {% extends "website/base.html" %}
 {% block content %}
     <article class="media content-section">
-        <h1>Rules Flashcards</h1>
+        <h1>Essay Writing Flashcards</h1>
     </article>
     <article id="flashcard-article" class="media content-section">
         <div id="column-row" class="row"></div>
