--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -31,7 +31,8 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{% url 'website-home' %}">Home</a>
-                    <a class="nav-item nav-link" href="{% url 'website-rules' %}">Rules</a>
+                    <a class="nav-item nav-link" href="{% url 'website-multiplechoice' %}">Multiple Choice</a>
+                    <a class="nav-item nav-link" href="{% url 'website-flashcards' %}">Flashcards</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
@@ -73,6 +74,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-<script src="../../static/blog/script.js"></script>
+<script src="../../static/blog/multiplechoice.js"></script>
+<script src="../../static/blog/flashcards.js"></script>
+
 </body>
 </html>
